--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,19 @@
 [package]
 name = "auth0"
-version = "0.3.0"
-authors = ["Davis Van Sant <davisvansant@users.noreply.github.com>"]
+version = "0.4.0"
+authors = ["Davis Van Sant <davisvansant@users.noreply.github.com>", "Marcus Lee <marcustutorial@hotmail.com>"]
 edition = "2018"
 description = "Auth0 API library"
-homepage = "https://github.com/davisvansant/auth0"
+homepage = "https://github.com/marcustut/auth0"
 license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reqwest = { version = "0.10.8", features = ["json"] }
-serde = { version = "1.0.115", features = ["derive"] }
-serde_json = "1.0.57"
+reqwest = { version = "0.11", features = ["json"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [dev-dependencies]
-tokio = { version = "0.2.22", features = ["macros"] }
+tokio = { version = "1.29", features = ["macros"] }
 mockito = { version = "0.27.0", default-features = false }
